	problem.
	* data/graphics/sprites/player_female_base.xml: Fixed female playerset
	animation definition.
	* data/help/about.txt, data/help/changes.txt, data/help/commands.txt,
	data/help/header.txt, data/help/index.txt, data/help/skills.txt,
	data/help/support.txt, data/help/team.txt: Forced to use UNIX end of
	line character.	

2006-07-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/floor_item.cpp, src/animation.h, src/being.cpp, src/main.cpp,
	src/gui/equipmentwindow.cpp, src/gui/playerbox.cpp,
	src/gui/itemcontainer.cpp, src/engine.cpp, src/tileset.h,
	src/animation.cpp, src/Makefile.am, src/resources/mapreader.cpp,
	src/resources/resourcemanager.cpp, src/resources/spriteset.cpp,
	src/resources/resourcemanager.h, src/resources/spriteset.h,
	src/being.h, src/graphic/spriteset.cpp, src/graphic/spriteset.h,
	data/graphics/sprites/npc.xml, data/graphics/sprites/weapons.xml:
	Implemented caching of spritesets, including a lot of cleanups to the
	new animation system. Action now refers to the Spriteset directly and
	AnimatedSprite refers to the current Action directly instead of using
	the std::map with a std::string constantly. Some methods and
	parameters are marked as const. The READ_PROP macro was replaced by
	static methods. Warnings are logged when unnamed actions are defined
	or when actions refer to undefined imagesets. Code is more tolerant
	towards missing actions.
	* NEWS: Rearranged some items.

2006-07-21  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/animation.cpp, src/animation.h: Removed unused code, fixed a
	numeric conversion, used a more meaningful speed.

2006-07-20  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/help/header.txt, data/help/skills.txt, docs/FAQ.txt, README:
	Updated some docs for the 0.0.20 release.
	* NEWS: Added new features of 0.0.20.
	* data/items.xml: Added shorts.
	* src/tmw.rc, The Mana World.dev, tmw.cbp: Added a resource script to
	let both Dev-Cpp and Code::Blocks share the same binary icon and