@@ -25,6 +25,7 @@
 	data/help/header.txt, data/help/index.txt, data/help/skills.txt,
 	data/help/support.txt, data/help/team.txt: Forced to use UNIX end of
 	line character.	
+	* src/net/equipmenthandler.cpp: Equipments now use real slot positions.
 
 2006-07-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
